# CS5-7319-Final-Project-Group-03-Nick-Wall_Diogo-Rodrigues

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  Readme.docx  pyproject.toml
Selected/: run.sh
Selected/src/: main.py  prompter.py
Selected/src/controllers/: lists.py  tasks.py
Selected/src/models/: list_tasks.py  lists.py  tasks.py
Selected/src/views/: base.py  confirmation_prompt.py
Selected/src/views/lists/: create_prompt.py  created.py  display.py  display_prompt.py
Selected/src/views/tasks/: children_marked_for_delete.py  create_prompt.py  created.py  delete_prompt.py  deleted.py  edit_task_parent_prompt.py  edit_task_prompt.py  edited.py  select_list_prompt.py  select_parent_task_prompt.py  toggle_prompt.py  toggled.py
Unselected/: run.sh
Unselected/src/: main.py  utils.py
mvc/: run.sh
mvc/src/: db.py  main.py  prompter.py
mvc/src/controllers/: lists.py  tasks.py
mvc/src/models/: list_tasks.py  lists.py  tasks.py
mvc/src/views/: confirmation_prompt.py
mvc/src/views/lists/: create_prompt.py  created.py  display.py  display_prompt.py
mvc/src/views/tasks/: children_marked_for_delete.py  create_prompt.py  created.py  delete_prompt.py  deleted.py  edit_task_parent_prompt.py  edit_task_prompt.py  edited.py  select_list_prompt.py  select_parent_task_prompt.py  toggle_prompt.py  toggled.py
pipe_filter/: run.sh
pipe_filter/src/: db.py  main.py  utils.py
