[tool.poetry]
name = "mvc"
version = "0.1.0"
description = "MVC implementation of our project"
authors = ["Nick Wall <60442663+nicholaswall@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
